[package]
name = "shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
# tokio + rustls
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.3"