[package]
name = "shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
# tokio + rustls
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }
serde = { version = "1.0", features = ["derive"] }
log = { version = "0.4", features = ["std", "serde"] }
log4rs = "1.3"
rand = "0.8.5"
envconfig = "0.10.0"
clap = { version = "4.0.29", features = ["derive", "env"] }
dotenv = "0.15.0"
thiserror = "1.0.30"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
